--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 </head>
 <body>
     <h1>Formulário de Cadastro</h1>
-    <label for="nome">Nome:</label>
-    <input type="text" id="nome"/>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email"/>
-    <br>
-    <label for="senha">Senha:</label>
-    <input type="password" id="senha"/>
-    <hr>
-    <button>Cadastrar</button>
+    <form>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome"/>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email"/>
+        <br>
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha"/>
+        <hr>
+        <button type="submit">Cadastrar</button>
+    </form>
 </body>
 </html>
